# Learning-ROS

./: README.md  my_controller.cpp
CONTROL101/my_controller/: CMakeLists.txt  package.xml
CONTROL101/my_controller/src/: my_controller.cpp
CONTROL101/my_robot_control/: CMakeLists.txt  package.xml
CONTROL101/om_control/launch/: om_control.launch
CONTROL101/project_controller/: CMakeLists.txt  package.xml
CONTROL101/project_controller/config/: ur5_controller.yaml
CONTROL101/project_controller/launch/: quiz_control_custom.launch
CONTROL101/quiz_control/config/: UR5_control.yaml
CONTROL101/quiz_control/launch/: quiz_control.launch
CONTROL101/rrbot_hardware_interface/: CMakeLists.txt
CONTROL101/rrbot_hardware_interface/src/: rrbot_hardware_interface.cpp
Learning ROS in 5 days(python)/actions_quiz/: CMakeLists.txt  package.xml
Learning ROS in 5 days(python)/actions_quiz/scripts/: actionsquizscript.py  test.py
Learning ROS in 5 days(python)/logger_example_pkg/launch/: start_logger_example.launch
Learning ROS in 5 days(python)/services_quiz/launch/: call_bb8_move_in_square_custom_service_server.launch
Learning ROS in 5 days(python)/services_quiz/scripts/: bb8_move_custom_service_client.py
Learning ROS in 5 days(python)/services_quiz/srv/: BB8CustomServiceMessage.srv
Learning ROS in 5 days(python)/topics_quiz/: CMakeLists.txt
Learning ROS in 5 days(python)/topics_quiz/launch/: topics_quiz.launch
Learning ROS in 5 days(python)/topics_quiz/scripts/: quiz.py  subscriber.py
TF/: frames.gv
TF/box_human/box_human_description/: package.xml
TF/box_human/box_human_description/config/: box_human copy.yaml  box_human.yaml
TF/box_human/box_human_description/launch/: box_human_control copy.launch  box_human_control.launch  box_human_spawn.launch  start_rviz.launch  urdf_visualize_xacro.launch
TF/box_human/box_human_description/robot/: box_human.gazebo  box_human.xacro  box_human_arm.xacro  box_human_core.xacro  box_human_flex_joint.xacro  box_human_flex_joint_copy.xacro  box_human_foot.xacro  box_human_hand.xacro  box_human_head.xacro  box_human_leg.xacro  macros.xacro  materials.xacro  properties.xacro
TF/box_human/box_human_description/rviz/: urdf_vis.rviz  urdf_vis_boxhuman1.rviz
TF/box_human/box_human_gazebo/: package.xml
TF/box_human/box_human_gazebo/launch/: main.launch  robot_control.launch  robot_spawn.launch  start_world.launch
TF/tf_exercises_pkg/: CMakeLists.txt  package.xml
TF/tf_exercises_pkg/config/: boxerconfig.rviz
TF/tf_exercises_pkg/launch/: pi_robot_control_alljoints.launch  pi_robot_control_norsp.launch  pi_robot_rst_jst.launch
TF/tf_exercises_pkg/script/: fixed_extra_frame_pub_ex24.py  moving_extra_frame_pub_ex24.py  multiple_broadcaster.py  multiple_broadcaster_turtle1_turtle2_coke.py
TF/tf_static_transform/launch/: pub_static_transform.launch
actions_quiz/launch/: action_custom_msg.launch  move_drone_square.launch
services_quiz/: CMakeLists.txt  package.xml
services_quiz/launch/: start_bb8_move_custom_service_server.launch
services_quiz/scripts/: bb8_move_custom_service_server.py
topics_quiz/: package.xml
topics_quiz/scripts/: publisher.py
(+42 files in other folders)
