<?xml version="1.0"?>
<package format="2">
  <name>box_human_gazebo</name>
  <version>0.0.0</version>
  <description>The box_human_gazebo package</description>

  <maintainer email="duckfrost@theconstructsim.com">RDaneelOlivaw</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>box_human_description</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_export_depend>box_human_description</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <exec_depend>box_human_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>


  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
